...
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/image_contact" />

    <EditText
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_pic"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/app_name"
        android:textSize="24sp" />

    <Button
        android:id="@+id/info_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/info_delete"/>

    <Button
        android:id="@+id/info_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/info_delete_button"
        android:text="@string/app_name"/>

    <Button
...
