...
    tools:context="com.cmsc355.contactapp.HomeActivity">

    <include layout="@layout/toolbar_default"
        android:id="@+id/home_toolbar" />

    <ListView
        android:id="@+id/home_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_toolbar" />

</RelativeLayout>

