<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmsc355.contactapp.SettingsActivity">

    <include layout="@layout/toolbar_default"
        android:id="@+id/settings_toolbar" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_toolbar"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/settings_title"/>

    <Button
        android:id="@+id/settings_nuke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_title"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_nuke" />

    <Button
        android:id="@+id/settings_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_nuke"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_about"/>

</RelativeLayout>
